--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,7 +1,7 @@
 {% load static from staticfiles %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Austria rulers</title>
